[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerStatsPanel/Stats_ButtonInactivated.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerStatsPanel/Stats_Background.png" type="Texture" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameInfoRelated/TowerStatsIcons/StatIcon_BaseDamage.png" type="Texture" id=4]
[ext_resource path="res://GameInfoRelated/TowerStatsIcons/StatIcon_OnHitMultiplier.png" type="Texture" id=5]
[ext_resource path="res://GameInfoRelated/TowerStatsIcons/StatIcon_BaseDamageType.png" type="Texture" id=6]
[ext_resource path="res://GameInfoRelated/TowerStatsIcons/StatIcon_BaseAtkSpeed.png" type="Texture" id=7]
[ext_resource path="res://GameInfoRelated/TowerStatsIcons/StatIcon_BaseRange.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerStatsPanel/TowerStatsPanel.gd" type="Script" id=9]
[ext_resource path="res://GameInfoRelated/TowerStatsIcons/StatIcon_BaseAbilityPotency.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="TowerStatsPanel" type="MarginContainer"]
margin_right = 101.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 101.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 101.0
margin_bottom = 10.0
mouse_filter = 2

[node name="BaseContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 42.0
margin_bottom = 10.0
mouse_filter = 2

[node name="BaseStatButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/BaseContainer"]
margin_right = 42.0
margin_bottom = 10.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/BaseContainer"]
margin_right = 42.0
margin_bottom = 10.0
mouse_filter = 2
custom_constants/margin_top = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/BaseContainer/Marginer"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Base"
align = 1

[node name="TotalContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 101.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_horizontal = 10

[node name="TotalStatButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/TotalContainer"]
margin_right = 42.0
margin_bottom = 10.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/TotalContainer"]
margin_right = 42.0
margin_bottom = 10.0
mouse_filter = 2
custom_constants/margin_top = 1

[node name="Label1" type="Label" parent="VBoxContainer/HBoxContainer/TotalContainer/Marginer"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Total"
align = 1

[node name="BodyMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 101.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer"]
margin_right = 101.0
margin_bottom = 50.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BodyMarginer"]
margin_right = 101.0
margin_bottom = 50.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer"]
margin_right = 101.0
margin_bottom = 39.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 39.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 3
custom_constants/margin_left = 2
custom_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 2.0
margin_top = 3.0
margin_right = 46.0
margin_bottom = 38.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 4

[node name="BaseDamagePanel" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 44.0
margin_bottom = 9.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/BaseDamagePanel"]
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="BaseDamageLabel" type="Label" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/BaseDamagePanel"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 9.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "dmg"

[node name="AttackSpeedPanel" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 44.0
margin_bottom = 22.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/AttackSpeedPanel"]
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="AttackSpeedLabel" type="Label" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/AttackSpeedPanel"]
margin_left = 16.0
margin_right = 44.0
margin_bottom = 9.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "atk spd"

[node name="OnHitFlatPanel" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 44.0
margin_bottom = 35.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/OnHitFlatPanel"]
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="OnHitFlatLabel" type="Label" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/OnHitFlatPanel"]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 9.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "xx"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 101.0
margin_bottom = 39.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 3
custom_constants/margin_left = 2
custom_constants/margin_bottom = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_left = 2.0
margin_top = 4.0
margin_right = 47.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/separation = 3

[node name="RangePanel" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_right = 45.0
margin_bottom = 9.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2/RangePanel"]
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 8 )

[node name="RangeLabel" type="Label" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2/RangePanel"]
margin_left = 25.0
margin_right = 45.0
margin_bottom = 9.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "range"

[node name="AbilityPotencyPanel" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_top = 12.0
margin_right = 45.0
margin_bottom = 21.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2/AbilityPotencyPanel"]
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 10 )

[node name="AbilityPotencyLabel" type="Label" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2/AbilityPotencyPanel"]
margin_left = 37.0
margin_right = 45.0
margin_bottom = 9.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "ap"

[node name="OnHitMultiplierPanel" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_top = 24.0
margin_right = 45.0
margin_bottom = 33.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2/OnHitMultiplierPanel"]
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="OnHitMultiplierLabel" type="Label" parent="VBoxContainer/BodyMarginer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer2/OnHitMultiplierPanel"]
margin_left = 37.0
margin_right = 45.0
margin_bottom = 9.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "xx"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer"]
margin_top = 40.0
margin_right = 101.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/margin_right = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 1

[node name="DamageTypePanel" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/MarginContainer"]
margin_left = 3.0
margin_right = 98.0
margin_bottom = 9.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer/VBoxContainer/MarginContainer/DamageTypePanel"]
margin_right = 7.0
margin_bottom = 9.0
mouse_filter = 2
custom_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer/VBoxContainer/MarginContainer/DamageTypePanel/MarginContainer"]
margin_right = 7.0
margin_bottom = 7.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="DamageTypeLabel" type="Label" parent="VBoxContainer/BodyMarginer/VBoxContainer/MarginContainer/DamageTypePanel"]
margin_left = 59.0
margin_right = 95.0
margin_bottom = 9.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "elemental"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BaseContainer/BaseStatButton" to="." method="_on_BaseStatButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TotalContainer/TotalStatButton" to="." method="_on_TotalStatButton_pressed"]
